public/style.css
/* ... */
.footer_component.background-color-gradient1 {
  background-image: linear-gradient(150deg, var(--sapphire) 13%, var(--dark-purple) 100%, #9e4a75);
}

.footer_content {
  grid-column-gap: 2rem;
  grid-row-gap: 2rem;
  grid-template-rows: auto;
  grid-template-columns: 1fr 1fr;
}

.footer-list_wrapper {
  width: 340px;
}

/*.link_social-media:focus {
  outline-color: var(--blue-3\<deleted\|variable-b86cbe11\>);
  outline-offset: 2px;
  outline-width: .2rem;
  outline-style: solid;
} */

.blog-image {
  object-fit: cover; /* Change object-fit to 'cover' */
  border-radius: 10px;
  position: absolute; /* Add this line */
  top: 0; /* Add this line */
  left: 0; /* Add this line */
  width: 100%; /* Add this line */
  height: 120%; /* Add this line */
}

.profile-picture {
  border-radius: 100px;
  align-self: center;
  max-width: 45px;
  margin-right: 10px;
}

.paragraph-detials-medium {
  margin-bottom: 24px;
  font-size: 15px;
  line-height: 24px;
}

.podcast-banner {
  background-color: #fff;
  border-radius: 15px;
  margin-bottom: 40px;
  padding: 20px;
  box-shadow: 0 12px 14px rgba(0, 0, 0, .06);
  animation: pulse 1s ease 3s 2 normal forwards;
}

@keyframes pulse {
  0% {
    transform: scale(1);
  }

  50% {
    transform: scale(1.1);
  }

  100% {
    transform: scale(1);
  }
}

.featured-item {
  color: #202146;
  cursor: pointer;
  align-items: center;
  margin-bottom: 20px;
  transition: transform .2s cubic-bezier(.455, .03, .515, .955);
  display: flex;
}

.featured-item:hover {
  transform: translate(10px);
}

.blog-grid {
  grid-column-gap: 40px;
  grid-template-rows: auto;
  grid-template-columns: 1fr .4fr;
}

.featured-block {
  margin-top: 10px;
}

.search-button-wrapper {
  height: 100%;
  position: absolute;
  top: 0%;
  bottom: auto;
  left: auto;
  right: 0%;
}

.title-medium {
  color: var(--lightblue);
  margin-bottom: 0;
  font-size: 17px;
  font-weight: 700;
  line-height: 130%;
  text-decoration: none;
}

.heading-h2 {
  margin-top: 0;
  font-size: 1.9rem;
}

.heading-5 {
  margin-top: 0;
  padding-top: 0;
}

.heading-h2.blog-title {
  grid-column-gap: 20px;
  grid-row-gap: 20px;
  margin-bottom: 2rem;
  font-size: 2.5rem;
}

.heading-h2.nieuws-cat {
  margin-bottom: 0;
  font-size: 1.5rem;
  font-weight: 600;
  line-height: 1.2;
}

.heading-h2.review-title {
  grid-column-gap: 20px;
  grid-row-gap: 20px;
  margin-bottom: 0;
  font-size: 2.5rem;
}

.heading-h2.review-topic {
  font-size: 1.5rem;
  font-weight: 600;
  line-height: 1.2;
}

.heading-h2.nieuws-list {
  margin-bottom: 1rem;
}

.blog-content {
  flex-direction: column;
  justify-content: space-between;
  align-items: flex-start;
  display: flex;
  height: 100%;
  grid-area: span 1 / span 2 / span 1 / span 2;
}

.blog-item {
  grid-column-gap: 40px;
  grid-row-gap: 16px;
  cursor: pointer;
  background-color: #fff;
  border-radius: 15px;
  grid-template-rows: auto;
  grid-template-columns: 1fr .8fr 1fr;
  grid-auto-columns: 1fr;
  align-items: center;
  justify-items: start;
  margin-bottom: 0;
  padding: 30px 20px;
  text-decoration: none;
  transition: transform .2s cubic-bezier(.455, .03, .515, .955);
  display: grid;
  box-shadow: 0 22px 34px rgba(0, 0, 0, .06);
  width: 100%;
}


.blog-item:hover {
  transform: scale(1.02);
}

.stick-wrapper {
  position: -webkit-sticky;
  position: sticky;
  top: 85px;
}

.categories-pill {
  cursor: pointer;
  background-color: #fff;
  border-radius: 100px;
  margin-bottom: 0;
  margin-right: 20px;
  padding: 6px 16px;
  text-decoration: none;
  transition: transform .2s cubic-bezier(.455, .03, .515, .955);
}

.categories-pill.w--current {
  transform: scale(1.25);
}

.categories-pill:hover {
  transform: scale(1.05);
}

.content {
  padding: 45px 3% 50px;
  animation: slide-in-bottom 1s ease 0ms 1 normal forwards;
}

@keyframes slide-in-bottom {
  0% {
    opacity: 0;
    transform: translateY(50px);
  }

  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

.search-button {
  background-color: #5c4ebd;
  border-radius: 15px;
  width: 60px;
  height: 100%;
  position: static;
  top: 0%;
  bottom: auto;
  left: auto;
  right: 0%;
}

.categories-block {
  flex-flow: column;
  justify-content: flex-end;
  align-items: flex-start;
  margin-top: 40px;
  display: flex;
}

.paragraph-detials-small {
  color: #9899ad;
  flex: 1;
  justify-content: flex-start;
  align-items: flex-end;
  margin-bottom: 0;
  margin-top: 0;
  font-size: 14px;
  line-height: 120%;
  display: flex;
}

.container {
  width: 100%;
  max-width: 1300px;
  height: 100%;
  margin-left: auto;
  margin-right: auto;
}

.title-large {
  color: var(--night);
  margin-bottom: 20px;
  font-size: 20px;
  font-weight: 700;
  line-height: 130%;
}

.title-large.xtra {
  font-size: 30px;
}

.content-left {
  grid-column-gap: 16px;
  grid-row-gap: 50px;
  flex-direction: column;
  grid-template-rows: auto auto auto auto;
  grid-template-columns: 1fr;
  grid-auto-columns: 1fr;
  justify-content: flex-start;
  align-items: center;
  display: flex;
}

.title-small {
  color: var(--night);
  margin-bottom: 4px;
  font-weight: 700;
}

.title-small.pink {
  color: var(--sapphire);
  margin-bottom: 0;
}

.blog-image-wrap {
  border-radius: 10px;
  min-width: 400px;
  overflow: hidden;
  position: relative; /* Add this line */
  width: 100%; /* Add this line */
  padding-top: 56.25%; /* Add this line */
}

.content-right {
  position: -webkit-sticky;
  position: sticky;
}

.seach-bar {
  color: #9899ad;
  border: 1px #000;
  border-radius: 15px;
  height: 60px;
  margin-bottom: 40px;
  padding-left: 20px;
  font-size: 15px;
  box-shadow: 0 12px 14px rgba(0, 0, 0, .06);
}

.search-icon {
  position: absolute;
  top: 22px;
  bottom: 0%;
  left: 22px;
  right: 0%;
}

.search {
  position: relative;
}
/* ... */

